Search help list structure created, img files uploaded

--- a/index.html
+++ b/index.html
@@ -41,16 +41,56 @@
             <div class="col-md-6 search-col">
                 <form class="search-form">
                     <i class="bi bi-search"></i>
-                    <input type="text" class="form-control search-form__input collapsible" placeholder="Search a book...">
+                    <input type="text" class="form-control search-form__input collapsible"
+                        placeholder="Search a book...">
                     <span class="search-form__right">
                         <i class="bi bi-mic-fill"></i>
                     </span>
                 </form>
-                <div class="content" id="searchHelp">
-                    <div class="card card-body">
-                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                <div class="search-help">
+                    <div class="card search-help__card">
+                        <p>
+                            Can't think of a book? Choose a category from the list below and browse the books to find
+                            the one that best suits you.
+                        </p>
+                        <a href="#" class="row search-help__list">
+                            <div class="col-2">
+                                <img src="./assets/img/books_01.png" alt="" class="search-help__img img-fluid">
+                            </div>
+                            <div class="col-8">
+                                <p class="search-help__category">Science-fiction</p>
+                                <small>#adventure #science #space</small>
+                            </div>
+                        </a>
+                        <a href="#" class="row search-help__list">
+                            <div class="col-2">
+                                <img src="./assets/img/books_02.png" alt="" class="search-help__img img-fluid">
+                            </div>
+                            <div class="col-8">
+                                <p class="search-help__category">Politics</p>
+                                <small>#strategy #intrigue #corruption</small>
+                            </div>
+                        </a>
+                        <a href="#" class="row search-help__list">
+                            <div class="col-2">
+                                <img src="./assets/img/books_03.png" alt="" class="search-help__img img-fluid">
+                            </div>
+                            <div class="col-8">
+                                <p class="search-help__category">Romantic literature</p>
+                                <small>#kiss #relationship #love</small>
+                            </div>
+                        </a>
+                        <a href="#" class="row search-help__list">
+                            <div class="col-2">
+                                <img src="./assets/img/books_04.png" alt="" class="search-help__img img-fluid">
+                            </div>
+                            <div class="col-8">
+                                <p class="search-help__category">Entertainment literature</p>
+                                <small>#fun #light #easy</small>
+                            </div>
+                        </a>
                     </div>
-                  </div>
+                </div>
             </div>
 
         </div>
