Create render function in main.js

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
         <!-- Search box -->
         <div class="row search-box">
-            <div class="col-md-6 search-col">
+            <div class="col-md-6 search-box__col">
                 <form class="search-form">
                     <i class="bi bi-search"></i>
-                    <input type="text" class="form-control search-form__input collapsible"
+                    <input type="text" name="searchInput" class="form-control search-form__input collapsible"
                         placeholder="Search a book...">
                     <span class="search-form__right">
                         <i class="bi bi-mic-fill"></i>
@@ -94,7 +94,7 @@
             </div>
 
         </div>
-        <div class="row search-info">
+        <div class="row search-info d-none">
             <div class="col-md-6 search-info__col">
                 <i class="bi bi-lightning-fill me-2"></i><span class="search-result__number"></span> Preatty good, isn't it? 
             </div>
