--- a/index.html
+++ b/index.html
@@ -96,7 +96,28 @@
         </div>
         <div class="row search-info d-none">
             <div class="col-md-6 search-info__col">
-                <i class="bi bi-lightning-fill me-2"></i><span class="search-result__number"></span> Preatty good, isn't it? If there are too many hits, reduce them using the filter.
+                <div>
+                    <i class="bi bi-lightning-fill me-2"></i><span class="search-result__number"></span> Preatty good,
+                    isn't it? If there are too many hits, reduce them using the filter.
+                </div>
+                <div>
+                    <article class="filter-group">
+                        <h6 class="mt-3">Price</h6>
+                        <div class="form-check filter-content">
+                            <label class="checkbox-btn">
+                                <input type="radio" name="filterPrice" id="filterPriceFree">
+                                <span class="btn btn-light"><i class="bi bi-eye me-2"></i>Free</span>
+                            </label>
+                            <label class="checkbox-btn">
+                                <input type="radio" name="filterPrice" id="filterPricePaid"> 
+                                <span class="btn btn-light"><i class="bi bi-eye-slash me-2"></i>Paid</span>
+                            </label>
+                        </div>
+                    </article>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <button class="btn btn-light btn-filter-apply">Apply filter</button>
+                </div>
             </div>
         </div>
         <div class="row search-result">
