--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                 </div>
                 <div>
                     <article class="filter-group">
+                        <h6 class="mt-3">Author</h6>
+                        <div class="form-check filter-content">
+                            <input type="text" name="searchAuthorInput" class="form-control search-info__input"
+                            placeholder="Type author name">
+                        </div>
                         <h6 class="mt-3">Price</h6>
                         <div class="form-check filter-content">
                             <label class="checkbox-btn">
